--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -1,11 +1,11 @@
-#Technologies {
+#Projects {
   position: relative;
 
   .layout {
     display: flex;
   }
 
-  .technologies-wrapper {
+  .projects-wrapper {
     width: 100%;
     position: relative;
     display: flex;
@@ -36,28 +36,20 @@
         font-size: 120px;
         object-fit: cover;
         background-color: $sliderBackground;
+        overflow: hidden;
 
         @include media('md') {
-          height: 220px;
+          height: 280px;
         }
 
         @include media('lg') {
           height: 320px;
         }
 
-        svg {
-          width: 84px;
-          height: 84px;
-
-          @include media('md') {
-            width: 124px;
-            height: 124px;
-          }
-
-          @include media('lg') {
-            width: 150px;
-            height: 150px;
-          }
+        img {
+          width: 100%;
+          height: 100%;
+          object-position: center;
         }
       }
     }
