--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,6 +10,9 @@ $saffronMango: #f7cc4c;
 $mineShaftLight: #252525;
 $codGrayJs: #151515;
 $mineShaftLighter: #393939;
+$sectionTextColor: #ffffff23;
+$testimonialColor: #ffffff59;
+$sliderBackground: #0d0d0dd7;
 
 $breakpoints: (
   'sm': 420px,
