--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,33 +1,35 @@
 //Variables
-@import "./variables";
+@import './variables';
 
 //Animations
-@import "./animations";
+@import './animations';
 
 //Mixin
-@import "./mixinStyles";
+@import './mixinStyles';
 
 //Main component styles
-@import "./mainApp";
+@import './mainApp';
 
 //Components imports
-@import "./header";
-@import "./menuButton";
-@import "./downScreen";
-@import "./containersWithBorder";
-@import "./normalText";
-@import "./navItem";
-@import "./filterImage";
-@import "./line";
-@import "./startScreen";
-@import "./homePage";
-@import "./upArrow";
-@import "./downArrow";
-@import "./layout";
-@import "./countBox";
-@import "./square";
+@import './header';
+@import './menuButton';
+@import './downScreen';
+@import './containersWithBorder';
+@import './normalText';
+@import './navItem';
+@import './filterImage';
+@import './line';
+@import './startScreen';
+@import './homePage';
+@import './upArrow';
+@import './downArrow';
+@import './layout';
+@import './countBox';
+@import './square';
 
 //Sections
-@import "./aboutMe";
-@import "./technologies";
-@import "./contact";
+@import './aboutMe';
+@import './technologies';
+@import './testimonial';
+@import './projects';
+@import './contact';
