feat: add projects slider, info, popup, update react, styles changes

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,6 +26,8 @@
 @import './layout';
 @import './countBox';
 @import './square';
+@import './popup';
+@import './exitIcon';
 
 //Sections
 @import './aboutMe';
