--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -17,6 +17,13 @@
       min-width: 150px;
       min-height: 200px;
       cursor: pointer;
+      transition: transform 0.1s linear;
+
+      &:hover {
+        transform: scale(1.02);
+        opacity: 0.9;
+        background-color: rgba(255, 255, 255, 0.103);
+      }
 
       .slider-item-title {
         height: 20%;
@@ -30,9 +37,6 @@
       .slider-item-image {
         width: 100%;
         height: 170px;
-        display: grid;
-        justify-content: center;
-        align-items: center;
         font-size: 120px;
         object-fit: cover;
         background-color: $sliderBackground;
@@ -43,7 +47,7 @@
         }
 
         @include media('lg') {
-          height: 320px;
+          height: 460px;
         }
 
         img {
