--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -11,6 +11,7 @@
       position: relative;
       word-break: break-word;
       grid-column: 1/13;
+      overflow: hidden;
 
       h1 {
         margin: 0 0 46px 0;
