feat: add contact send functionality

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -30,7 +30,7 @@ footer {
     .footer-copyright {
       display: flex;
       align-items: flex-end;
-      text-align: left;
+      justify-content: center;
     }
   }
 }
