--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,7 +28,7 @@
 @import './square';
 @import './popup';
 @import './exitIcon';
-@import './footer';
+@import './cookieBanner';
 
 //Sections
 @import './aboutMe';
@@ -36,3 +36,4 @@
 @import './testimonial';
 @import './projects';
 @import './contact';
+@import './footer';
