--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* font-family: 'Poppins', sans-serif; */
-  /* font-family: 'Josefin Sans', sans-serif; */
 }
 
 html {
@@ -17,14 +15,11 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Darker Grotesque', sans-serif;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; */
+  font-family: 'Darker Grotesque', -apple-system, BlinkMacSystemFont, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
-  /* overflow: hidden; */
-  /* In the future enable */
+  overflow: hidden;
   color: white;
 }
 
